# Telecom_Customer_Churn_Prediction

./: .dockerignore  Deployment.txt  Dockerfile  MLFLOW_README.md  ML_Model_Building_Telecom_Churn.ipynb  ML_models_pred_comparison.excalidraw  ML_models_pred_comparison.xlsx  README.md  Telco_Churn_Data_Cleaning_EDA.ipynb  api.py  aws_deployment.txt  aws_deploymentg_errors_faced.txt  docker-compose.yml  log_existing_models.py  main.py  mlflow_demo.py  pyproject.toml  register_models.py  requirements.txt  streamlit_app.py
Saved ML models/: tuned_logistic_regr_standardscaled_smote.joblib  tuned_xgb_no_preproc_model.joblib  tuned_xgb_optuna_model.joblib  tuned_xgb_standardscalde_smotenn_model.joblib  tuned_xgb_standardscaler_model.joblib  tuned_xgb_standardscaler_smotenn_model.joblib
load_tests/: locustfile.py
telecom_churn/: __init__.py  api.py  batch_processor.py  config.py  exceptions.py  logger.py  mlflow_utils.py  model_manager.py  preprocessing.py  schemas.py
tests/: __init__.py  test_api.py  test_batch_processor.py  test_logging.py  test_preprocessing.py
