[project]
name = "telecom-customer-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "pandas>=1.3",
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "joblib",
    "imbalanced-learn",
    "xgboost",
    "lightgbm",
    "catboost",
    "optuna",
    "matplotlib",
    "fastapi",
    "uvicorn[standard]",
    "mlflow",
    "python-dotenv",
    "pydantic",
    "pytest",
    "locust",
    "requests",
]
